修改显示名为525

--- a/invoices/templates/invoices/dashboard.html
+++ b/invoices/templates/invoices/dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>发票管理系统 - 数据大屏</title>
+    <title>525实验室发票管理系统 - 数据大屏</title>
     <link rel="stylesheet" href="{% static 'invoices/css/dashboard.css' %}">
     <script src="{% static 'invoices/js/echarts.min.js' %}"></script>
     <style>
@@ -40,7 +40,7 @@
             <a href="{% url 'invoices:manage_login' %}" class="admin-btn">管理员登录</a>
         {% endif %}
     </div>
-    <div class="header">发票管理数据可视化平台</div>
+    <div class="header">525实验室发票管理数据可视化平台</div>
     
     <div class="dashboard-container">
         <div class="left-panel">
