--- a/invoices/templates/invoices/manage/base.html
+++ b/invoices/templates/invoices/manage/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}发票管理系统{% endblock %}</title>
+    <title>{% block title %}525实验室发票管理系统{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'invoices/css/manage/style.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
