--- a/invoices/templates/invoices/manage/expense_type_list.html
+++ b/invoices/templates/invoices/manage/expense_type_list.html
@@ -1,6 +1,6 @@
 {% extends 'invoices/manage/base.html' %}
 
-{% block title %}费用类型管理 - 发票管理系统{% endblock %}
+{% block title %}费用类型管理 - 525实验室发票管理系统{% endblock %}
 
 {% block content %}
 <div class="page-header">
