--- a/invoices/templates/invoices/manage/invoice_list.html
+++ b/invoices/templates/invoices/manage/invoice_list.html
@@ -1,7 +1,7 @@
 {% extends 'invoices/manage/base.html' %}
 {% load static %}
 
-{% block title %}发票管理 - 发票管理系统{% endblock %}
+{% block title %}发票列表 - 525实验室发票管理系统{% endblock %}
 
 {% block content %}
 <div class="page-header">
