--- a/invoices/templates/invoices/manage/dashboard.html
+++ b/invoices/templates/invoices/manage/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'invoices/manage/base.html' %}
 
-{% block title %}控制台 - 发票管理系统{% endblock %}
+{% block title %}控制台 - 525实验室发票管理系统{% endblock %}
 
 {% block content %}
 <div class="dashboard-header">
