--- a/invoices/templates/invoices/manage/expense_type_form.html
+++ b/invoices/templates/invoices/manage/expense_type_form.html
@@ -1,6 +1,6 @@
 {% extends 'invoices/manage/base.html' %}
 
-{% block title %}{% if expense_type %}编辑{% else %}添加{% endif %}费用类型 - 发票管理系统{% endblock %}
+{% block title %}{% if expense_type %}编辑{% else %}添加{% endif %}费用类型 - 525实验室发票管理系统{% endblock %}
 
 {% block content %}
 <div class="page-header">
