--- a/invoices/templates/invoices/manage/invoice_form.html
+++ b/invoices/templates/invoices/manage/invoice_form.html
@@ -86,6 +86,21 @@
                     </button>
                 </div>
             </div>
+
+            <div class="form-group">
+                <label for="attachment">附件</label>
+                <div class="file-upload-group">
+                    <input type="file" id="attachment" name="attachment">
+                    {% if invoice.attachment %}
+                    <div class="current-attachment">
+                        <a href="{{ invoice.attachment.url }}" target="_blank" class="btn btn-link">
+                            <span class="icon">📎</span>查看当前附件
+                        </a>
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="help-text">可上传任意类型的附件文件</div>
+            </div>
         </div>
 
         <div id="travel_details" style="display: none;">
