--- a/invoices/templates/invoices/manage/login.html
+++ b/invoices/templates/invoices/manage/login.html
@@ -14,7 +14,7 @@
             <div class="form-group">
                 <input type="password" name="password" placeholder="密码" required>
             </div>
-            <button type="submit">登录</button>
+            <button type="submit" class="login-btn">登录</button>
         </form>
         <a href="{% url 'invoices:dashboard' %}" class="back-link">返回数据大屏</a>
     </div>
